--- a/index.html
+++ b/index.html
@@ -30,21 +30,20 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Isaiah Medina</h1>
+        <h2>Sophmore in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am now a Sophmore at Bob Jones University studying History.</p>
          <p>
-            I attend Gateway Baptist Church in Travelers Rest, SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend Faith Baptist Church in Davison, MI. My favorite website is  
+            <a href=https://www.youtube.com/here</a>, so I can learn something new each day. Also, you can email me  
+            <a href=imedi086@students.bju.edu>here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy watching historical topics, and studying Church history.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        History<br />
         Bob Jones University
     </div>
 </body>
