--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@ h3 {
         
          <p>I am now a Sophmore at Bob Jones University studying History.</p>
          <p>
-            I attend Faith Baptist Church in Davison, MI. My favorite website is  
-            <a href=https://www.youtube.com/here</a>, so I can learn something new each day. Also, you can email me  
+            I attend Faith Baptist Church in Davison, MI. My favorite website is Youtube, so I can learn something new each day. Also, you can email me  
             <a href=imedi086@students.bju.edu>here</a>.
          </p> 
          <p>
